; ModuleID = '/home/carl/AnghaBench/freebsd/sys/arm/xilinx/extr_zy7_gpio.c_zy7_gpio_pin_set.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/arm/xilinx/extr_zy7_gpio.c_zy7_gpio_pin_set.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.zy7_gpio_softc = type { i32 }

@EINVAL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i32, i32)* @zy7_gpio_pin_set to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @zy7_gpio_pin_set(i32 %0, i32 %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca %struct.zy7_gpio_softc*, align 8
  store i32 %0, i32* %5, align 4
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  %9 = load i32, i32* %5, align 4
  %10 = call %struct.zy7_gpio_softc* @device_get_softc(i32 %9)
  store %struct.zy7_gpio_softc* %10, %struct.zy7_gpio_softc** %8, align 8
  %11 = load i32, i32* %6, align 4
  %12 = call i32 @VALID_PIN(i32 %11)
  %13 = icmp ne i32 %12, 0
  br i1 %13, label %14, label %17

14:                                               ; preds = %3
  %15 = load i32, i32* %7, align 4
  %16 = icmp ugt i32 %15, 1
  br i1 %16, label %17, label %19

17:                                               ; preds = %14, %3
  %18 = load i32, i32* @EINVAL, align 4
  store i32 %18, i32* %4, align 4
  br label %54

19:                                               ; preds = %14
  %20 = load i32, i32* %6, align 4
  %21 = and i32 %20, 16
  %22 = icmp ne i32 %21, 0
  br i1 %22, label %23, label %38

23:                                               ; preds = %19
  %24 = load %struct.zy7_gpio_softc*, %struct.zy7_gpio_softc** %8, align 8
  %25 = load i32, i32* %6, align 4
  %26 = ashr i32 %25, 5
  %27 = call i32 @ZY7_GPIO_MASK_DATA_MSW(i32 %26)
  %28 = load i32, i32* %6, align 4
  %29 = and i32 %28, 15
  %30 = shl i32 65536, %29
  %31 = xor i32 -65536, %30
  %32 = load i32, i32* %7, align 4
  %33 = load i32, i32* %6, align 4
  %34 = and i32 %33, 15
  %35 = shl i32 %32, %34
  %36 = or i32 %31, %35
  %37 = call i32 @WR4(%struct.zy7_gpio_softc* %24, i32 %27, i32 %36)
  br label %53

38:                                               ; preds = %19
  %39 = load %struct.zy7_gpio_softc*, %struct.zy7_gpio_softc** %8, align 8
  %40 = load i32, i32* %6, align 4
  %41 = ashr i32 %40, 5
  %42 = call i32 @ZY7_GPIO_MASK_DATA_LSW(i32 %41)
  %43 = load i32, i32* %6, align 4
  %44 = and i32 %43, 15
  %45 = shl i32 65536, %44
  %46 = xor i32 -65536, %45
  %47 = load i32, i32* %7, align 4
  %48 = load i32, i32* %6, align 4
  %49 = and i32 %48, 15
  %50 = shl i32 %47, %49
  %51 = or i32 %46, %50
  %52 = call i32 @WR4(%struct.zy7_gpio_softc* %39, i32 %42, i32 %51)
  br label %53

53:                                               ; preds = %38, %23
  store i32 0, i32* %4, align 4
  br label %54

54:                                               ; preds = %53, %17
  %55 = load i32, i32* %4, align 4
  ret i32 %55
}

declare dso_local %struct.zy7_gpio_softc* @device_get_softc(i32) #1

declare dso_local i32 @VALID_PIN(i32) #1

declare dso_local i32 @WR4(%struct.zy7_gpio_softc*, i32, i32) #1

declare dso_local i32 @ZY7_GPIO_MASK_DATA_MSW(i32) #1

declare dso_local i32 @ZY7_GPIO_MASK_DATA_LSW(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
